<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/signUpScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_white"
        tools:context=".views.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:background="#CC0000FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgViewAvatar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/imageview_circular"
                app:srcCompat="@drawable/profile_pic_moniepoint" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNotification"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:contentDescription=""
                android:backgroundTint="@color/white"
                app:icon="@drawable/outline_notifications_24"
                app:layout_constraintBottom_toBottomOf="@id/imgViewAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgViewAvatar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvLocationPlaceholder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/baseline_near_me_24"
                android:gravity="center_vertical"
                android:text="Your Location"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/mtvLocation"
                app:layout_constraintEnd_toStartOf="@+id/btnNotification"
                app:layout_constraintStart_toEndOf="@+id/imgViewAvatar"
                app:layout_constraintTop_toTopOf="@id/imgViewAvatar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvLocation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Lagos, Nigeria"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/imgViewAvatar"
                app:layout_constraintEnd_toStartOf="@+id/btnNotification"
                app:layout_constraintStart_toEndOf="@+id/imgViewAvatar"
                app:layout_constraintTop_toBottomOf="@+id/mtvLocationPlaceholder" />

            <SearchView
                android:id="@+id/svReceiptSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgViewAvatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<com.google.android.material.search.SearchView
            android:id="@+id/mtvReceiptSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/outline_search_24"
            android:drawableEnd="@drawable/qr_code_scan_svgrepo_com"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="Enter your receipt number..."
             />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvTracking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
            android:layout_margin="10dp"
            android:text="@string/tracking"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mCvTracking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtvTracking" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvShipmentNumberHeading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:text="@string/shipment_number"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvShipmentNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/forklift" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvShipmentNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:text="@string/sample_shipping_number"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mtvShipmentNumberHeading" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mtvShipmentNumber" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.55" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgViewSender"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/package_sending"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvSender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvSenderLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvSenderLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sender"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toEndOf="@+id/imgViewSender"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvSender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sample_sender"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toEndOf="@+id/imgViewSender"
                    app:layout_constraintTop_toBottomOf="@+id/mtvSenderLabel" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgViewReceiver"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/package_receiving"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvReceiver"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvReceiverLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvReceiverLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/receiver"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toEndOf="@+id/imgViewReceiver"
                    app:layout_constraintTop_toBottomOf="@+id/mtvSender" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvReceiver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sample_receiver"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toEndOf="@+id/imgViewReceiver"
                    app:layout_constraintTop_toBottomOf="@+id/mtvReceiverLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvTimeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/time"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sample_time"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/mtvTimeLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvStatusLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/status"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/mtvTime" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/waiting_to_collect"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/mtvStatusLabel" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mtvStatus" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_stop"
                    android:textColor="@color/red"
                    app:icon="@drawable/outline_add_24"
                    app:iconGravity="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvAvailableVehicles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/available_vehicles"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mCvTracking" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvAvailableVehicles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mtvAvailableVehicles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>